--- a/WolvenKit/Views/HomePage/Pages/WikiPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/WikiPageView.xaml
@@ -1,16 +1,15 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.HomePage.Pages.WikiPageView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com">
+                   xmlns:catel="http://schemas.catelproject.com" xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf">
 
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        
-        <Label Grid.Row="0" Content="{Binding Title}" />
-        <Label Grid.Row="1" Content="Here goes your real content" />
+
+        <DockPanel>
+    
+            <wv2:WebView2 Name = "webView"
+                  Source = "https://wiki.cybermods.net/wolvenkit/"/>
+        </DockPanel>
     </Grid>
     
 </catel:UserControl>
