--- a/WolvenKit/Views/HomePage/Pages/AboutPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/AboutPageView.xaml
@@ -1,16 +1,25 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.HomePage.Pages.AboutPageView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com">
+                   xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol">
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        
-        <Label Grid.Row="0" Content="{Binding Title}" />
-        <Label Grid.Row="1" Content="Here goes your real content" />
+    <Grid Background="{DynamicResource MahApps.Brushes.ThemeBackground}" MinWidth="300" MinHeight="300" >
+        <Grid Margin="3,75,3,0">
+        </Grid>
+        <Grid HorizontalAlignment="Right" Width="3" Background="{DynamicResource MahApps.HamburgerMenu.Pane.Background}"></Grid>
+
+        <Grid HorizontalAlignment="left" Width="3" Background="{DynamicResource MahApps.HamburgerMenu.Pane.Background}"></Grid>
+        <Grid VerticalAlignment="Top" HorizontalAlignment="Right" Width="30" Height="3" Background="{DynamicResource MahApps.HamburgerMenu.Pane.Background}"></Grid>
+        <StackPanel HorizontalAlignment="Right" VerticalAlignment="Top" Margin="5" Orientation="Horizontal">
+
+            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center " FontSize="20" Text="About"></TextBlock>
+            <hc:Divider Margin="15" Orientation="Vertical" Height="45" HorizontalAlignment="Center" VerticalAlignment="Center"></hc:Divider>
+            <hc:AnimationPath Height="45" Width="45" Data="{DynamicResource AboutGeo}" 
+                          Duration="00:00:08" 
+                          Stretch="Uniform" StrokeThickness="1.5"
+                          Stroke="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="5" PathLength="70" HorizontalAlignment="Center" VerticalAlignment="Center"></hc:AnimationPath>
+        </StackPanel>
+
     </Grid>
-    
+
 </catel:UserControl>
