--- a/WolvenKit/Views/HomePage/Pages/SettingsPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/SettingsPageView.xaml
@@ -1,16 +1,57 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.HomePage.Pages.SettingsPageView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com">
+                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"          
+                   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        
-        <Label Grid.Row="0" Content="{Binding Title}" />
-        <Label Grid.Row="1" Content="Here goes your real content" />
+                   xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol">
+
+
+    <Grid Background="{DynamicResource MahApps.Brushes.ThemeBackground}" MinWidth="300" MinHeight="300" >
+        <Grid Margin="3,75,3,0">
+            <hc:TabControl x:Name="TabControlDemo" IsAnimationEnabled="True" ShowCloseButton="False" IsDraggable="False" IsTabFillEnabled="True" Margin="0,0,0,0" >
+                <hc:TabItem  IsSelected="True" >
+                    <hc:TabItem.Header>
+                        <StackPanel Orientation="Horizontal">
+                            <iconPacks:PackIconCodicons Kind="VM"></iconPacks:PackIconCodicons>
+                            <TextBlock Text="Application" Margin="10,0,0,0"></TextBlock>
+                        </StackPanel>
+                    </hc:TabItem.Header>
+                    <hc:SimplePanel Background="{DynamicResource RegionBrush}"/>
+                </hc:TabItem>
+
+
+                <hc:TabItem  IsSelected="True" >
+                    <hc:TabItem.Header>
+                        <StackPanel Orientation="Horizontal">
+                            <iconPacks:PackIconCodicons Kind="Code"></iconPacks:PackIconCodicons>
+                            <TextBlock Text="Editor" Margin="10,0,0,0"></TextBlock>
+                        </StackPanel>
+                    </hc:TabItem.Header>
+                    <hc:SimplePanel Background="{DynamicResource RegionBrush}">
+
+                    </hc:SimplePanel>
+                </hc:TabItem>
+
+            </hc:TabControl>
+        </Grid>
+        <Grid HorizontalAlignment="Right" Width="3" Background="{DynamicResource MahApps.HamburgerMenu.Pane.Background}"></Grid>
+
+        <Grid HorizontalAlignment="left" Width="3" Background="{DynamicResource MahApps.HamburgerMenu.Pane.Background}"></Grid>
+        <Grid VerticalAlignment="Top" HorizontalAlignment="Right" Width="30" Height="3" Background="{DynamicResource MahApps.HamburgerMenu.Pane.Background}"></Grid>
+        <StackPanel HorizontalAlignment="Right" VerticalAlignment="Top" Margin="5" Orientation="Horizontal">
+
+            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center " FontSize="20" Text="Settings"></TextBlock>
+            <hc:Divider Margin="15" Orientation="Vertical" Height="45" HorizontalAlignment="Center" VerticalAlignment="Center"></hc:Divider>
+            <hc:AnimationPath Height="45" Width="45" Data="{DynamicResource SettingsGeo}" 
+                          Duration="00:00:06" 
+                          Stretch="Uniform" StrokeThickness="1.5"
+                          Stroke="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="5" PathLength="30" HorizontalAlignment="Center" VerticalAlignment="Center"></hc:AnimationPath>
+        </StackPanel>
+
     </Grid>
+    
+    
+    
+   
     
 </catel:UserControl>
