--- a/WolvenKit/Views/HomePage/Pages/WikiPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/WikiPageView.xaml
@@ -1,15 +1,37 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.HomePage.Pages.WikiPageView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com" xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf">
+                   xmlns:catel="http://schemas.catelproject.com" xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf" xmlns:hc="https://handyorg.github.io/handycontrol">
 
-    <Grid>
+    <Grid Background="{DynamicResource MahApps.Brushes.ThemeBackground}" MinWidth="300" MinHeight="300" >
+        <Grid Margin="3,75,3,0">
+            <wv2:WebView2 Source="https://wiki.cybermods.net/wolvenkit/"/>
+        </Grid>
+        <Grid HorizontalAlignment="Right" Width="3" Background="{DynamicResource MahApps.HamburgerMenu.Pane.Background}"></Grid>
 
-        <DockPanel>
-    
-            <wv2:WebView2 Name = "webView"
-                  Source = "https://wiki.cybermods.net/wolvenkit/"/>
-        </DockPanel>
+        <Grid HorizontalAlignment="left" Width="3" Background="{DynamicResource MahApps.HamburgerMenu.Pane.Background}"></Grid>
+        <Grid VerticalAlignment="Top" HorizontalAlignment="Right" Width="30" Height="3" Background="{DynamicResource MahApps.HamburgerMenu.Pane.Background}"></Grid>
+        <StackPanel HorizontalAlignment="Right" VerticalAlignment="Top" Margin="5" Orientation="Horizontal">
+
+            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center " FontSize="20" Text="Wiki"></TextBlock>
+            <hc:Divider Margin="15" Orientation="Vertical" Height="45" HorizontalAlignment="Center" VerticalAlignment="Center"></hc:Divider>
+            <hc:AnimationPath Height="45" Width="45" Data="{DynamicResource WikiGeo}" 
+                          Duration="00:00:08" 
+                          Stretch="Uniform" StrokeThickness="1.5"
+                          Stroke="{DynamicResource MahApps.Brushes.ThemeForeground}" PathLength="250" RenderTransformOrigin="0.5,0.5">
+                <hc:AnimationPath.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="180"/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </hc:AnimationPath.RenderTransform>
+            </hc:AnimationPath>
+        </StackPanel>
+
     </Grid>
-    
+
+
+
 </catel:UserControl>
