--- a/WolvenKit/Views/HomePage/HomePageView.xaml
+++ b/WolvenKit/Views/HomePage/HomePageView.xaml
@@ -254,7 +254,7 @@
         
         
         <Grid  x:Name="PageViewGrid" Margin="200,0,0,0" >
-            <HPPage:RecentProjectView></HPPage:RecentProjectView>
+            <HPPage:AboutPageView></HPPage:AboutPageView>
         </Grid>
     </Grid>
 
