--- a/WolvenKit/Views/HomePage/Pages/AboutPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/AboutPageView.xaml
@@ -1,10 +1,72 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.HomePage.Pages.AboutPageView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol">
+                   xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks">
 
     <Grid Background="{DynamicResource MahApps.Brushes.ThemeBackground}" MinWidth="300" MinHeight="300" >
         <Grid Margin="3,75,3,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+            </Grid.RowDefinitions>
+
+            <Grid Grid.Column="0" Grid.Row="0">
+
+                <StackPanel Orientation="Horizontal" Margin="155,5,5,56">
+                    <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="Info" Spin="False" SpinAutoReverse="False" Height="25" Width="25" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,15,0,0" HorizontalAlignment="Center"  VerticalAlignment="Top" />
+
+                    <StackPanel  VerticalAlignment="Top" Orientation="Vertical" HorizontalAlignment="Stretch">
+
+                        <TextBlock Text="WolvenKit"  FontSize="20" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="10,10,0,0"></TextBlock>
+                        <hc:Divider  VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,10,0,0"></hc:Divider>
+                    </StackPanel>
+                </StackPanel>
+            </Grid>
+
+            <Grid Grid.Column="1" Grid.Row="0">
+                <StackPanel Orientation="Horizontal" Margin="75,5,5,56">
+                    <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="Info" Spin="False" SpinAutoReverse="False" Height="25" Width="25" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,15,0,0" HorizontalAlignment="Center"  VerticalAlignment="Top" />
+
+                    <StackPanel  VerticalAlignment="Top" Orientation="Vertical" HorizontalAlignment="Stretch">
+
+                        <TextBlock Text="Authors"  FontSize="20" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="10,10,0,0"></TextBlock>
+                        <hc:Divider  VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,10,0,0"></hc:Divider>
+                    </StackPanel>
+                </StackPanel>
+            </Grid>
+            <Grid Grid.Column="0" Grid.Row="1">
+                <StackPanel Orientation="Horizontal" Margin="155,5,5,56">
+                    <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="Info" Spin="False" SpinAutoReverse="False" Height="25" Width="25" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,15,0,0" HorizontalAlignment="Center"  VerticalAlignment="Top" />
+
+                    <StackPanel  VerticalAlignment="Top" Orientation="Vertical" HorizontalAlignment="Stretch">
+
+                        <TextBlock Text="Special Thanks"  FontSize="20" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="10,10,0,0"></TextBlock>
+                        <hc:Divider  VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,10,0,0"></hc:Divider>
+                    </StackPanel>
+                </StackPanel>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="1">
+                <StackPanel Orientation="Vertical">
+                    <StackPanel Orientation="Horizontal" Margin="75,5,5,56">
+                        <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="Info" Spin="False" SpinAutoReverse="False" Height="25" Width="25" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,15,0,0" HorizontalAlignment="Center"  VerticalAlignment="Top" />
+
+                        <StackPanel  VerticalAlignment="Top" Orientation="Vertical" HorizontalAlignment="Stretch">
+
+                            <TextBlock Text="Licences"  FontSize="20" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="10,10,0,0"></TextBlock>
+                            <hc:Divider  VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,10,0,0"></hc:Divider>
+                        </StackPanel>
+                    </StackPanel>
+
+                </StackPanel>
+          
+            </Grid>
+
+
+
         </Grid>
         <Grid HorizontalAlignment="Right" Width="3" Background="{DynamicResource MahApps.HamburgerMenu.Pane.Background}"></Grid>
 
