Basic Design : WelcomePage Design : WelcomePage Details : Welcome page added , registered,  has clock. >:O

--- a/WolvenKit/Views/HomePage/TopicView.xaml
+++ b/WolvenKit/Views/HomePage/TopicView.xaml
@@ -5,7 +5,7 @@
                    xmlns:av="http://schemas.microsoft.com/expression/blend/2008" 
                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
                    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-                   xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:wiz="clr-namespace:WolvenKit.Views.Wizards"
+                   xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:wiz="clr-namespace:WolvenKit.Views.Wizards" xmlns:pag="clr-namespace:WolvenKit.Views.HomePage.Pages"
                    mc:Ignorable="av" >
 
 
@@ -15,7 +15,7 @@
 
     </catel:UserControl.Resources>
     <Grid x:Name="TopicViewer" MinWidth="300" MinHeight="300" HorizontalAlignment="Stretch" VerticalAlignment="Center" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Margin="35,35,35,35">
-        <wiz:PublishWizardView/>
+        <pag:WelcomePageView/>
 
 
     </Grid>
