--- a/WolvenKit/Views/HomePage/HomePageView.xaml
+++ b/WolvenKit/Views/HomePage/HomePageView.xaml
@@ -255,7 +255,7 @@
         
         
         <Grid  x:Name="PageViewGrid" Margin="200,0,0,0" >
-            
+            <HPPage:GithubPageView></HPPage:GithubPageView>
         </Grid>
     </Grid>
 
