Basic Design : ThemeWizard Design : ThemeWizard Details : Made a basic themepicker/creator will improve on the looks later.

--- a/WolvenKit/Views/HomePage/TopicView.xaml
+++ b/WolvenKit/Views/HomePage/TopicView.xaml
@@ -15,7 +15,7 @@
 
     </catel:UserControl.Resources>
     <Grid x:Name="TopicViewer" MinWidth="300" MinHeight="300" HorizontalAlignment="Stretch" VerticalAlignment="Center" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Margin="35,35,35,35">
-        <pag:WelcomePageView/>
+        <wiz:ThemeWizardView/>
 
 
     </Grid>
