--- a/WolvenKit/Views/Wizards/PublishWizardView.xaml
+++ b/WolvenKit/Views/Wizards/PublishWizardView.xaml
@@ -47,7 +47,7 @@
             <Button Margin="3" Width="50" Height="30" VerticalAlignment="Bottom" IsEnabled="True" hc:IconElement.Geometry="{StaticResource LeftGeometry}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" BorderBrush="{DynamicResource MahApps.Brushes.ThemeBackground}" HorizontalAlignment="Left" Click="Button_Click_1"/>
             <hc:StepBar x:Name="StepMain" Margin="0,0,0,3" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Dock="Bottom"  >
                 <hc:StepBarItem Content="Required Settings"/>
-                <hc:StepBarItem Content="Optional Settings"/>
+                <hc:StepBarItem Content="Additional Settings"/>
                 <hc:StepBarItem Content="Finalize Setup"/>
 
             </hc:StepBar>
