--- a/WolvenKit/Views/Wizards/WizardPages/PublishWizard/OptionalSettingsView.xaml
+++ b/WolvenKit/Views/Wizards/WizardPages/PublishWizard/OptionalSettingsView.xaml
@@ -1,16 +1,97 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.Wizards.WizardPages.PublishWizard.OptionalSettingsView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com">
+                   xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks">
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        
-        <Label Grid.Row="0" Content="{Binding Title}" />
-        <Label Grid.Row="1" Content="Here goes your real content" />
+    <Grid HorizontalAlignment="Stretch" Grid.Row="3" >
+        <Grid Margin="5,5,5,5" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" HorizontalAlignment="Stretch">
+            <Grid Grid.Row="1" HorizontalAlignment="Stretch">
+                <Grid Margin="0,10,0,0"  VerticalAlignment="Top">
+                    <hc:ScrollViewer>
+                        <Grid Margin="22,0,10,0">
+                            <TextBlock Text="Additional Settings"  FontSize="14" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0"></TextBlock>
+
+                            <StackPanel>
+                            <Grid Margin="0,32,0,0">
+
+                                <StackPanel Margin="0,0,0,0" Orientation="Vertical">
+                                    
+                                    <Grid Margin="0,5,0,5">
+                                        <TextBlock Margin="30,0,0,0" VerticalAlignment="Center" Text="Youtube"></TextBlock>
+                                        <iconPacks:PackIconBoxIcons  Grid.Row="0"   Kind="LogosYoutube" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="5" HorizontalAlignment="Left"  VerticalAlignment="Center" />
+                                        <TextBox Margin="100,0,0,0"></TextBox>
+                                    </Grid>
+                                    <Grid Margin="0,5,0,5">
+                                        <TextBlock Margin="30,0,0,0" VerticalAlignment="Center" Text="Twitch"></TextBlock>
+
+                                        <iconPacks:PackIconBoxIcons  Grid.Row="0"   Kind="LogosTwitch" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="5" HorizontalAlignment="Left"  VerticalAlignment="Center" />
+                                        <TextBox Margin="100,0,0,0"></TextBox>
+                                    </Grid>
+                                    <Grid Margin="0,5,0,5">
+                                        <TextBlock Margin="30,0,0,0" VerticalAlignment="Center" Text="Twitter"></TextBlock>
+
+                                        <iconPacks:PackIconBoxIcons  Grid.Row="0"   Kind="LogosTwitter" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="5" HorizontalAlignment="Left"  VerticalAlignment="Center" />
+                                        <TextBox Margin="100,0,0,0"></TextBox>
+                                    </Grid>
+                                    <Grid Margin="0,5,0,5">
+                                        <TextBlock Margin="30,0,0,0" VerticalAlignment="Center" Text="Facebook"></TextBlock>
+
+                                        <iconPacks:PackIconBoxIcons  Grid.Row="0"   Kind="LogosFacebook" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="5" HorizontalAlignment="Left"  VerticalAlignment="Center" />
+                                        <TextBox Margin="100,0,0,0"></TextBox>
+                                    </Grid>
+                                    <Grid Margin="0,5,0,5">
+                                        <TextBlock Margin="30,0,0,0" VerticalAlignment="Center" Text="Discord"></TextBlock>
+
+                                        <iconPacks:PackIconBoxIcons  Grid.Row="0"   Kind="LogosDiscord" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="5" HorizontalAlignment="Left"  VerticalAlignment="Center" />
+                                        <TextBox Margin="100,0,0,0"></TextBox>
+                                    </Grid>
+                                    <Grid Margin="0,5,0,5">
+                                        <TextBlock Margin="30,0,0,0" VerticalAlignment="Center" Text="Website"></TextBlock>
+
+                                        <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="Cloud" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="5" HorizontalAlignment="Left"  VerticalAlignment="Center" />
+                                        <TextBox Margin="100,0,0,0"></TextBox>
+                                    </Grid>
+                                    <Grid Margin="0,5,0,5">
+                                        <TextBlock Margin="30,0,0,0" VerticalAlignment="Center" Text="Donate"></TextBlock>
+
+                                        <iconPacks:PackIconBoxIcons  Grid.Row="0"   Kind="RegularDonateHeart" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="5" HorizontalAlignment="Left"  VerticalAlignment="Center" />
+                                        <TextBox Margin="100,0,0,0"></TextBox>
+                                    </Grid>
+                                </StackPanel>
+                            </Grid>
+                            <TextBox hc:InfoElement.TitleWidth="100" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="License" Style="{StaticResource TextBoxExtend}" Margin="0,32,0,0" Text="test" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" SelectionBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Stretch"/>
+                            <Grid Margin="0,32,0,5">
+                                <TextBlock Margin="0,0,0,0" VerticalAlignment="Center" Text="Header Background"></TextBlock>
+                                    <Button Margin="120,0,0,0" HorizontalAlignment="Left" Content="None"></Button>
+                                </Grid>
+                            <Grid Margin="0,32,0,5">
+                                <TextBlock Margin="0,0,0,0" VerticalAlignment="Center" Text="Icon Background"></TextBlock>
+                                    <Button Margin="120,0,0,0" HorizontalAlignment="Left" Content="None"></Button>
+
+                                </Grid>
+                            <Grid Margin="0,32,0,5">
+                                <TextBlock Margin="0,0,0,0" VerticalAlignment="Center" Text="Use Black Text"></TextBlock>
+                                    <CheckBox Margin="120,0,0,0" HorizontalAlignment="Left" Content="None"></CheckBox>
+
+                                </Grid>
+                            <Grid >
+                                <RichTextBox Margin="100,32,0,0" HorizontalAlignment="Stretch" Height="200"></RichTextBox>
+
+                                <TextBlock Text="Large Description" Margin="2,32,0,0" VerticalAlignment="Center" />
+
+                            </Grid>
+
+
+
+                        </StackPanel>
+
+
+                    </Grid>
+                    </hc:ScrollViewer>
+                    
+                </Grid>
+            </Grid>
+        </Grid>
     </Grid>
-    
+
 </catel:UserControl>
