Design : Asset Browser Basic Design : Asset Browser Details : Designed asset browser. Top bar needs onmousedown event for dragging Close and minimize need their events accordingly.
Edits : Changed Link on about popup to githublink

--- a/WolvenKit/Views/HomePage/HomePageView.xaml
+++ b/WolvenKit/Views/HomePage/HomePageView.xaml
@@ -125,8 +125,14 @@
 
 
                 </hc:SideMenu>
+                
             </hc:TransitioningContentControl>
+            <hc:Tag Margin="0,0,0,15" VerticalAlignment="Bottom" ShowCloseButton="False" Content="USERNAME">
+                <hc:Tag.Header>
+                    <iconPacks:PackIconCodicons Kind="Account"></iconPacks:PackIconCodicons>
 
+                </hc:Tag.Header>
+            </hc:Tag>
             <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Height="54">
 
 
@@ -255,7 +261,6 @@
         
         
         <Grid  x:Name="PageViewGrid" Margin="200,0,0,0" >
-           
         </Grid>
     </Grid>
 
