Window Functionality : Asset Browser Details : Added Drag , Resize , Minimize and Close Window Functionality. ( NON MVVM)

--- a/WolvenKit/Views/HomePage/HomePageView.xaml
+++ b/WolvenKit/Views/HomePage/HomePageView.xaml
@@ -261,6 +261,7 @@
         
         
         <Grid  x:Name="PageViewGrid" Margin="200,0,0,0" >
+            <HPPage:RecentProjectView></HPPage:RecentProjectView>
         </Grid>
     </Grid>
 
