--- a/WolvenKit/Views/AssetBrowser/AssetBrowserView.xaml
+++ b/WolvenKit/Views/AssetBrowser/AssetBrowserView.xaml
@@ -3,7 +3,7 @@
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"     
                   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
                    xmlns:hc="https://handyorg.github.io/handycontrol"
-                  xmlns:catel="http://schemas.catelproject.com" xmlns:Fluent="urn:fluent-ribbon" WindowStartupLocation="CenterScreen"  MinHeight="900" MinWidth="1200" WindowStyle="None" Title="Asset Browser" >
+                  xmlns:catel="http://schemas.catelproject.com" xmlns:Fluent="urn:fluent-ribbon" ShowInTaskbar="True" AllowsTransparency="True" ResizeMode="CanResizeWithGrip" BorderBrush="{x:Null}" WindowStartupLocation="CenterScreen"  MinHeight="600" WindowStyle="None" Title="Asset Browser" >
    
     <catel:DataWindow.Resources>
         <ResourceDictionary>
@@ -30,11 +30,11 @@
                 <RowDefinition Height="9*"/>
             </Grid.RowDefinitions>
             
-                <Grid x:Name="DraggableTitleBar" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"> <!--TitleBar  Please add onmousedown event to be able to drag the window-->
-                    <Button Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" BorderBrush="{x:Null}"  HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3,3,5,3">
+                <Grid x:Name="DraggableTitleBar" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" MouseLeftButtonDown="DraggableTitleBar_MouseLeftButtonDown"> <!--TitleBar  Please add onmousedown event to be able to drag the window-->
+                    <Button Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" BorderBrush="{x:Null}"  HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3,3,5,3" Click="Button_Click">
                         <iconPacks:PackIconCodicons   Kind="Close"/>
                     </Button>
-                    <Button BorderBrush="{x:Null}" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3,3,45,3">
+                    <Button BorderBrush="{x:Null}" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3,3,45,3" Click="Button_Click_1">
                         <iconPacks:PackIconCodicons  Kind="ChromeMinimize"/>
                     </Button>
                     <TextBlock Text="Asset Browser" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,0,0,0"/>
