--- a/WolvenKit/Views/CodeEditor/CodeEditorView.xaml
+++ b/WolvenKit/Views/CodeEditor/CodeEditorView.xaml
@@ -1,13 +1,14 @@
 ﻿<catel:DataWindow x:Class="WolvenKit.Views.CodeEditor.CodeEditorView"
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                  xmlns:catel="http://schemas.catelproject.com" xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+                  xmlns:catel="http://schemas.catelproject.com" xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" xmlns:hc="https://handyorg.github.io/handycontrol"
                   ShowInTaskbar="True" 
                   AllowsTransparency="True" 
                   ResizeMode="CanResizeWithGrip" 
                   BorderBrush="{x:Null}" 
                   WindowStartupLocation="CenterScreen"  
                   MinHeight="600" 
+                  MinWidth="400"
                   WindowStyle="None" 
                   Title="Code Editor" >
 
@@ -19,7 +20,12 @@
             <RowDefinition Height="9*"/>
         </Grid.RowDefinitions>
 
-        <Grid x:Name="DraggableTitleBar" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="auto"/>
+        </Grid.ColumnDefinitions>
+
+        <Grid x:Name="DraggableTitleBar" Grid.ColumnSpan="2" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
             <!--TitleBar  Please add onmousedown event to be able to drag the window-->
             <Button Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" BorderBrush="{x:Null}"  HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3,3,5,3" >
                 <iconPacks:PackIconCodicons   Kind="Close"/>
@@ -30,7 +36,10 @@
             <TextBlock Text="Code Editor" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,0,0,0"/>
         </Grid>
 
-        <avalonEdit:TextEditor
+
+        <hc:TabControl Style="{StaticResource TabControlInLine}" TabStripPlacement="Bottom" Grid.Row="2">
+            <hc:TabItem Header="Edit">
+                <avalonEdit:TextEditor
             Margin="3"
             Grid.Row="2"
                     Name="avEditor"
@@ -40,7 +49,44 @@
                     Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
                     LineNumbersForeground="Black">
 
-        </avalonEdit:TextEditor>
+                </avalonEdit:TextEditor>
+            </hc:TabItem>
+            <hc:TabItem Header="Compare">
+                
+            </hc:TabItem>
+        </hc:TabControl>
+
+
+        <ToolBarTray Grid.Row="2" Grid.Column="1">
+            <ToolBar Band="0" Style="{StaticResource ToolBarBaseStyle}" Padding="6">
+                <Menu Background="Transparent" VerticalAlignment="Center">
+                    <MenuItem Header="View">
+                        <MenuItem Header="Empty">
+
+                        </MenuItem>
+                        <MenuItem Header="Empty">
+
+                        </MenuItem>
+                    </MenuItem>
+                    <MenuItem Header="Edit">
+                        <MenuItem Header="Empty">
+
+                        </MenuItem>
+                        <MenuItem Header="Empty">
+
+                        </MenuItem>
+                        <MenuItem Header="Empty">
+
+                        </MenuItem>
+                    </MenuItem>
+                    <MenuItem Header="Bookmarks"/>
+                    <MenuItem Header="Tabs"/>
+
+                </Menu>
+            </ToolBar>
+
+        </ToolBarTray>
+       
 
 
    
